app/javascript/styles/mastodon/components.scss
/* ... */
.character-counter {
  cursor: default;
  font-family: $font-sans-serif, sans-serif;
  font-size: 14px;
  font-weight: 600;
  color: $lighter-text-color;

  &.character-counter--over {
    color: $warning-red;
  }
}

.no-reduce-motion .spoiler-input {
  transition: height 0.4s ease, opacity 0.4s ease;
}

.emojione {
  font-size: inherit;
  vertical-align: middle;
  object-fit: contain;
  margin: -0.2ex 0.15em 0.2ex;
  width: 16px;
  height: 16px;

  img {
    width: auto;
  }
}

.reply-indicator {
  background: $ui-primary-color;
}

.quote-indicator {
  background: $success-green;
}

.reply-indicator,
.quote-indicator {
  border-radius: 4px;
  margin-bottom: 10px;
  padding: 10px;
  min-height: 23px;
  overflow-y: auto;
  flex: 0 2 auto;
}

.reply-indicator__header,
.quote-indicator__header {
  margin-bottom: 5px;
  overflow: hidden;
}

.reply-indicator__cancel,
.quote-indicator__cancel {
  float: right;
  line-height: 24px;
}

.reply-indicator__display-name,
.quote-indicator__display-name {
  color: $inverted-text-color;
  display: block;
  max-width: 100%;
  line-height: 24px;
  overflow: hidden;
  padding-right: 25px;
  text-decoration: none;
}

.reply-indicator__display-avatar,
.quote-indicator__display-avatar {
  float: left;
  margin-right: 5px;
}

.status__content--with-action {
  cursor: pointer;
}

.status__content {
  clear: both;
}

.status__content,
.reply-indicator__content,
.quote-indicator__content {
  position: relative;
  font-size: 15px;
  line-height: 20px;
  word-wrap: break-word;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-top: 2px;
  color: $primary-text-color;

  &:focus {
    outline: 0;
  }

  &.status__content--with-spoiler {
    white-space: normal;

    .status__content__text {
      white-space: pre-wrap;
    }
  }

  .emojione {
    width: 20px;
    height: 20px;
    margin: -3px 0 0;
  }

  p {
    // margin-bottom: 20px;
    white-space: pre-wrap;
    unicode-bidi: plaintext;

    &:last-child {
      margin-bottom: 0;
    }

    &:not(:first-child) {
      margin-top: 20px;
    }
  }

  a {
    color: $secondary-text-color;
    text-decoration: none;
    unicode-bidi: isolate;

    &:hover {
      text-decoration: underline;

      .fa {
        color: lighten($dark-text-color, 7%);
      }
    }

    &.mention {
      &:hover {
        text-decoration: none;

        span {
          text-decoration: underline;
        }
      }
    }

    .fa {
      color: $dark-text-color;
    }
  }

  a.unhandled-link {
    color: $highlight-text-color;
  }

  a.image-source-link {
    display: none;
  }

  .status__content__show-translation-button,
  +.status__content__read-more-button,
  .status__content__read-more-button,
  .status__content__spoiler-link {
    background: $action-button-color;

    &:hover,
    &:focus {
      background: lighten($action-button-color, 7%);
      text-decoration: none;
    }

    &::-moz-focus-inner {
      border: 0;
    }

    &::-moz-focus-inner,
    &:focus,
    &:active {
      outline: 0 !important;
    }
  }

  .status__content__text {
    display: none;

    &.status__content__text--visible {
      display: block;
    }
  }
}

.announcements__item__content {
  word-wrap: break-word;
  overflow-y: auto;

  .emojione {
    width: 20px;
    height: 20px;
    margin: -3px 0 0;
  }

  p {
    margin-bottom: 10px;
    white-space: pre-wrap;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    color: $secondary-text-color;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }

    &.mention {
      &:hover {
        text-decoration: none;

        span {
          text-decoration: underline;
        }
      }
    }

    &.unhandled-link {
      color: $highlight-text-color;
    }
  }
}

.status__content.status__content--collapsed {
  max-height: 20px * 15; // 15 lines is roughly above 500 characters
}

.status__content__show-translation-button,
.status__content__read-more-button {
  display: block;
  font-size: 15px;
  line-height: 20px;
  color: $highlight-text-color;
  border: 0;
  background: transparent;
  padding: 0;
  padding-top: 8px;
  text-decoration: none;
  margin-top: 8px;
  // font-size: 15px;
  // line-height: 20px;
  // color: lighten($ui-highlight-color, 8%);
  // border: 0;
  // background: transparent;
  // padding: 0;
  // padding-top: 8px;
  // text-decoration: none;

  // &:hover,
  // &:active {
  //   text-decoration: underline;
  // }
}

.status__content__edited-label {
  display: block;
  cursor: default;
  font-size: 15px;
  line-height: 20px;
  padding: 0;
  padding-top: 8px;
  color: $dark-text-color;
  font-weight: 500;
}

.status__content__show-translation-button,
.status__content__read-more-button,
.status__content__spoiler-link {
  display: inline-block;
  border-radius: 2px;
  background: transparent;
  border: 0;
  color: $inverted-text-color;
  font-weight: 700;
  font-size: 11px;
  padding: 0 6px;
  text-transform: uppercase;
  line-height: 20px;
  cursor: pointer;
  vertical-align: top;
}

.status__wrapper--filtered {
  color: $dark-text-color;
  border: 0;
  font-size: inherit;
  text-align: center;
  line-height: inherit;
  margin: 0;
  padding: 15px;
  box-sizing: border-box;
  width: 100%;
  clear: both;
  border-bottom: 1px solid lighten($ui-base-color, 8%);

  &__button {
    display: inline;
    color: lighten($ui-highlight-color, 8%);
    border: 0;
    background: transparent;
    padding: 0;
    font-size: inherit;
    line-height: inherit;

    &:hover,
    &:active {
      text-decoration: underline;
    }
  }
}

.quote-inline {
  display: none;
}
/* ... */

